tests/misc_tests/type_eq_ui_tests/polymatch_semantic-err.rs
struct Foo;

fn main(){
    typewit::polymatch! {100;
        200 | 300 => {
            impl Foo {
                fn foo() {}
            }
        }
    };
}